# ax-discovery-portal

./: .env.example  .gitignore  =0.8.0  CLAUDE.md  MONOREPO_SETUP.md  README.md  changelog.md  openapi_temp.json  package.json  pnpm-lock.yaml  project-todo.md  pyproject.toml  render.yaml  turbo.json  wrangler.toml
.claude/agents/: brief_writer.md  confluence_sync.md  external_scout.md  governance.md  interview_miner.md  orchestrator.md  scorecard_evaluator.md  voc_analyst.md
.claude/skills/ax-brief/: SKILL.md
.claude/skills/ax-confluence/: SKILL.md
.claude/skills/ax-health-check/: SKILL.md
.claude/skills/ax-scorecard/: SKILL.md
.claude/skills/ax-seminar/: SKILL.md
.claude/skills/ax-sprint/: SKILL.md
.claude/skills/ax-todo/: SKILL.md
.claude/skills/ax-wrap-up/: SKILL.md
.github/workflows/: auto-fix-ci.yml  cd-backend.yml  cd-frontend.yml  ci-backend.yml  ci-frontend.yml  evals-regression.yml  frontend.yml
app/mobile/: README.md
app/web/: README.md
apps/web/: next.config.ts  package.json
apps/web/public/: manifest.json
backend/agent_runtime/: event_manager.py  event_types.py  runner.py  stage_rules.py
backend/agent_runtime/ontology/: graph_query.py  validator.py
backend/agent_runtime/workflows/: voc_data_handlers.py  wf_confluence_sync.py  wf_external_scout.py  wf_inbound_triage.py  wf_interview_to_brief.py  wf_kpi_digest.py  wf_seminar_pipeline.py  wf_voc_mining.py
backend/alembic/: env.py
backend/alembic/versions/: 20260115_084150_add_ontology_tables_entities_and_triples.py  20260117_100000_add_p0_ontology_fields.py
backend/api/: deps.py  main.py  security.py
backend/api/routers/: __init__.py  activities.py  auth.py  brief.py  evals.py  inbox.py  ontology.py  play_dashboard.py  scorecard.py  search.py  stages.py  stream.py  tasks.py  webhooks.py  workflows.py  xai.py
backend/core/: __init__.py  config.py  logging.py
backend/database/: __init__.py  base.py  session.py
backend/database/models/: __init__.py  action_log.py  approval_request.py  brief.py  entity.py  eval.py  opportunity.py  play_record.py  scorecard.py  signal.py  triple.py  user.py
backend/database/repositories/: __init__.py  activity.py  base.py  brief.py  ontology.py  opportunity.py  play_record.py  scorecard.py  signal.py  task.py
backend/evals/: __init__.py  cli.py
backend/evals/adapters/: __init__.py  (+4 more)
backend/integrations/: file_processor.py
backend/services/: __init__.py  approval_service.py  embedding_service.py  entity_resolution_service.py  llm_extraction_service.py  notification_service.py  ontology_integration_service.py  play_sync_service.py  play_sync_triggers.py  rag_service.py  task_converter.py  todo_parser.py  todo_sync_service.py
d1-migrations/: 0001_initial_schema.sql
docs/: AX_System_Design_Cloudflare_WebApp_VibeCoding_v0_1.docx
scripts/: load_play_data_to_db.py  test_seminar_collectors.py
tests/: conftest.py  test_agents.py
tests/e2e/: test_api_integration.py  test_e2e_flows.py  test_sse_stream.py
tests/fixtures/: sample_agents.py  sample_markdown.py
tests/integration/: test_ontology_integration.py
tests/loadtest/: locustfile.py
tests/unit/: test_activity_repository.py  test_adapter_integration.py  test_api_routers.py  test_confluence_mcp.py  test_d1_client.py  test_embedding_service.py  test_entity_resolution_service.py  test_evals_cli.py  test_evals_loaders.py  test_evals_models.py  test_event_manager.py  test_external_collectors.py  test_llm_extraction_service.py  test_ontology_integration_service.py  test_ontology_modules.py  test_ontology_service.py  test_rag_service.py  test_repositories.py  test_runner.py  test_search_router.py  test_slack_mcp.py  test_teams_mcp.py  test_vectorize_client.py  test_vectorize_use_cases.py  test_webhook_processor.py  test_wf_confluence_sync.py  test_wf_voc_mining.py  test_workflows.py
(+55 files in other folders)
